--- a/app/views/full-page-examples/news-and-communications/index.njk
+++ b/app/views/full-page-examples/news-and-communications/index.njk
@@ -14,14 +14,16 @@ scenario: >-
 notes: >-
   The filtering and sorting may not be accurate – this is just a demonstration
   of the sort of interactions that you would find on a search page.
+
+  This example merges features seen on GOV.UK news and communication finders and search pages.
 ---
 
 {# This example is based of the live "News and communications" GOV.UK page: https://www.gov.uk/news-and-communications #}
 {% extends "_generic.njk" %}
 
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
+{% from "input/macro.njk" import govukInput %}
 {% from "select/macro.njk" import govukSelect %}
-{% from "radios/macro.njk" import govukRadios %}
 {% from "checkboxes/macro.njk" import govukCheckboxes %}
 {% from "button/macro.njk" import govukButton %}
 
@@ -29,31 +31,8 @@ notes: >-
 {% block pageTitle %}{{ pageTitle }} - GOV.UK{% endblock %}
 
 {% block head %}
-    {{ super() }}
-    <style>
-        .app-document-list {
-            list-style: none;
-            padding: 0;
-            margin-top: 0;
-            margin-bottom: 30px;
-        }
-        .app-document-list > li {
-            border-bottom: 1px solid #bfc1c3;
-            margin-bottom: 15px;
-        }
-        .app-metadata-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            margin-left: -5px;
-            margin-right: -5px;
-        }
-        .app-metadata-list > li {
-            display: inline-block;
-            margin-left: 5px;
-            margin-right: 5px;
-        }
-    </style>
+  {{ super() }}
+  <link rel="stylesheet" href="/public/full-page-examples/news-and-communications.css">
 {% endblock %}
 
 {% block beforeContent %}
@@ -69,103 +48,144 @@ notes: >-
 
 {% block content %}
   <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
+
+  {{ govukInput({
+    label: {
+      text: "Search GOV.UK",
+      classes: "govuk-label--l, govuk-visually-hidden"
+    },
+    id: "search",
+    name: "search",
+    classes: "govuk-!-width-two-thirds",
+    value: "driving"
+  }) }}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-third">
-        <form method="get" novalidate>
-            {{ govukRadios({
-              idPrefix: "order",
-              name: "order",
-              classes: "govuk-radios--small",
-              fieldset: {
-                legend: {
-                  text: "Sort by",
-                  classes: "govuk-fieldset__legend--s"
-                }
-              },
-              items: [
-                {
-                  id: "order",
-                  value: "most-viewed",
-                  text: "Most viewed",
-                  checked: order === "most-viewed"
-                },
-                {
-                    value: "updated-newest",
-                    text: "Updated (newest)",
-                    checked: order === "updated-newest"
-                },
-                {
-                    value: "updated-oldest",
-                    text: "Updated (oldest)",
-                    checked: order === "updated-oldest"
-                }
-              ]
-            }) }}
+      <ul class="govuk-list govuk-list--spaced app-filter">
+        <li><a class="govuk-link" href="#">Topic</a></li>
+        <li><a class="govuk-link" href="#">Content type</a></li>
+        <li><a class="govuk-link" href="#">Updated</a></li>
+      </ul>
+      <form method="get" novalidate>
+        {{ govukCheckboxes({
+          idPrefix: "organisation",
+          name: "organisation",
+          classes: "govuk-checkboxes--small",
+          fieldset: {
+            legend: {
+              html: "<a class='govuk-link' href=''>Organisation</a>",
+              classes: "app-open-fieldset govuk-fieldset__legend--s"
+            }
+          },
+          items: [
+            {
+              value: "hmrc",
+              text: "HM Revenue and Customs (HMRC)",
+              checked: values["organisation"]|length and "hmrc" in values["organisation"]
+            },
+            {
+              value: "employment-tribunal",
+              text: "Employment Tribunal",
+              checked: values["organisation"]|length and "employment-tribunal" in values["organisation"]
+            },
+            {
+              value: "mod",
+              text: "Ministry of Defence",
+              checked: values["organisation"]|length and "mod" in values["organisation"]
+            }
+          ]
+        }) }}
 
-            {{ govukCheckboxes({
-              idPrefix: "organisation",
-              name: "organisation",
-              classes: "govuk-checkboxes--small",
-              fieldset: {
-                legend: {
-                  text: "Organisation",
-                  classes: "govuk-fieldset__legend--s"
-                }
-              },
-              items: [
-                {
-                  value: "hmrc",
-                  text: "HM Revenue and Customs (HMRC)",
-                  checked: values["organisation"]|length and "hmrc" in values["organisation"]
-                },
-                {
-                  value: "employment-tribunal",
-                  text: "Employment Tribunal",
-                  checked: values["organisation"]|length and "employment-tribunal" in values["organisation"]
-                },
-                {
-                  value: "mod",
-                  text: "Ministry of Defence",
-                  checked: values["organisation"]|length and "mod" in values["organisation"]
-                }
-              ]
-            }) }}
-
-            {{ govukButton({
-                text: "Update filters"
-            }) }}
-        </form>
+        {{ govukButton({
+            text: "Update filters"
+        }) }}
+      </form>
     </div>
     <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-l">{{ total }} results</h2>
-        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-        <ul class="app-document-list">
+      <div class="app-search-results-summary">
+        <h2 class="govuk-heading-s">{{ total }} results</h2>
+        <span class="subscribe-link"><a href="#" class="govuk-link govuk-body-s">Subscribe to feed</a></span>
+      </div>
+        <hr class="govuk-section-break govuk-section-break--s govuk-section-break--visible govuk-!-margin-bottom-3">
+        <div class="app-search-result-sort">
+          {{ govukSelect({
+            id: "sort",
+            name: "sort",
+            classes: "app-search-result-sort",
+            label: {
+              text: "Sort by"
+            },
+            items: [
+              {
+                value: "relevance",
+                text: "Relevance"
+              },
+              {
+                value: "updated-new",
+                text: "Updated (newest)",
+                selected: true
+              },
+              {
+                value: "updated-old",
+                text: "Updated (oldest)"
+              }
+            ]
+          }) }}
+        </div>
+        <ul class="govuk-list app-document-list">
             {% for document in documents %}
                 {% set document = document.document %}
                 <li>
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
-                      <a class="govuk-link" href="https://gov.uk{{ document.link }}">
+                      <a class="govuk-link govuk-link--no-underline" href="https://gov.uk{{ document.link }}">
                         {{ document.title }}
                       </a>
                     </h3>
-                    <p class="govuk-body govuk-!-margin-bottom-4">
+                    <p class="govuk-body-s govuk-!-margin-bottom-4">
                         {{ document.summary }}
                     </p>
-                    <ul class="app-metadata-list">
-                        {% for data in document.metadata %}
-                            <li class="govuk-body govuk-!-font-size-16">
-                                {% if data['is_text'] %}
-                                    {{ data.value }}
-                                {% endif %}
-                                {% if data['is_date'] %}
-                                    Updated: {{ data['human_date'] }}
-                                {% endif %}
-                            </li>
+                    {% if document.children %}
+                      <ul class="govuk-list app-search-result-list__children">
+                        {% for child in document.children %}
+                          <li>
+                            <h4 class="govuk-heading-xs govuk-!-margin-bottom-1 govuk-!-margin-top-1">
+                              <a class="govuk-link govuk-link--no-underline" href="#">
+                                {{ child.title }}
+                              </a>
+                            </h4>
+                            <p class="govuk-body-s">
+                              {{ child.summary }}
+                            </p>
+                          </li>
                         {% endfor %}
-                    </ul>
+                      </ul>
+                    {% endif %}
+                    {% if document.metadata %}
+                      <ul class="app-metadata-list govuk-!-padding-0">
+                          {% for data in document.metadata %}
+                              <li class="govuk-body govuk-!-font-size-16">
+                                  {% if data['is_text'] %}
+                                      {{ data.value }}
+                                  {% endif %}
+                                  {% if data['is_date'] %}
+                                      Updated: {{ data['human_date'] }}
+                                  {% endif %}
+                              </li>
+                          {% endfor %}
+                      </ul>
+                    {% endif %}
                 </li>
             {% endfor %}
         </ul>
+
+        <p class="govuk-body">
+        <a class="app-next-page govuk-link govuk-link--no-underline" href="#">
+          <span class="app-next-page__text govuk-!-font-weight-bold">Next page</span><br>
+          <span class="app-next-page__number govuk-!-font-size-16">2 of 2939</span>
+        </a>
+      </p>
+
     </div>
   </div>
 {% endblock %}
